fixed weird alignment issue from unset line height. added progress

--- a/src-content/style.scss
+++ b/src-content/style.scss
@@ -2,17 +2,24 @@
   display: block;
   position: relative;
   height: 50px;
-  margin: 15px 0;
-  width: 100%;
+  margin: 15px;
+  width: calc(100% - 30px);
   overflow: hidden;
   z-index: 999999999;
   background: black;
   color: white;
   font-family: arial;
   font-size: 30px;
+  line-height: 1em;
   text-align: center;
   top: 0;
   border-radius: 15px;
+
+  @for $i from 0 through 100 {
+    &[data-progress='#{$i}'] {
+      background: linear-gradient(to right, #000 0%, #000 #{$i+'%'}, #222 #{$i+'%'}, #222 100%);
+    }
+  }
 
   .__stutter_text {
     position: relative;
